// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a code block 1`] = `
<pre
  className="language-js prism-code language-javascript css-0"
  style={Object {}}
>
  <div
    className="token-line"
  >
    <span
      className="token console class-name"
    >
      console
    </span>
    <span
      className="token punctuation"
    >
      .
    </span>
    <span
      className="token method function property-access"
    >
      log
    </span>
    <span
      className="token punctuation"
    >
      (
    </span>
    <span
      className="token string"
    >
      'hello, world!'
    </span>
    <span
      className="token punctuation"
    >
      )
    </span>
  </div>
</pre>
`;

exports[`renders with other languages 1`] = `
<pre
  className="language-php prism-code language-php css-0"
  style={Object {}}
>
  <div
    className="token-line"
  >
    <span
      className="token operator"
    >
      &lt;
    </span>
    <span
      className="token plain"
    >
      h1
    </span>
    <span
      className="token operator"
    >
      &gt;
    </span>
    <span
      className="token plain"
    >
      Hello
    </span>
    <span
      className="token operator"
    >
      &lt;
    </span>
    <span
      className="token operator"
    >
      /
    </span>
    <span
      className="token plain"
    >
      h1
    </span>
    <span
      className="token operator"
    >
      &gt;
    </span>
  </div>
</pre>
`;
